--- a/src/assets/style/layout.sass
+++ b/src/assets/style/layout.sass
@@ -36,11 +36,14 @@
     padding: 0 50px
 
   .layout-content
-    height: calc( 100vh - 130px )
+    min-height: calc( 100vh - 220px )
+    background-color: #fff
+    padding: 30px
+    margin: 30px 30px 0
 
   .layout-footer
     height: 70px
     line-height: 70px
     font-size: 14px
     text-align: center
-    color: rgba(0,0,0,.65)
+    color: #666
