--- a/src/assets/style/layout.sass
+++ b/src/assets/style/layout.sass
@@ -15,8 +15,14 @@
   margin-left: 200px
 
 .layout-header
+  line-height: initial
   background: #fff
-  padding: 0
+  padding: 0 40px
+  display: flex
+  align-items: center
+  justify-content: space-between
+  .title
+    font-size: 16px
 
 .layout-content
   min-height: calc( 100vh - 160px )
